fixed header and whitespace for route page

--- a/src/app/AdminNavView/RouteDashboard/page.module.css
+++ b/src/app/AdminNavView/RouteDashboard/page.module.css
@@ -120,6 +120,7 @@
     border: 1px solid #0F7AFF;
     border-radius: 69px;
     overflow: hidden;
+    background-color: #fff;
   }
   
   .searchIcon {
