--- a/src/app/AdminNavView/RouteDashboard/stylesheet.css
+++ b/src/app/AdminNavView/RouteDashboard/stylesheet.css
@@ -1,5 +1,6 @@
 .container {
-  padding: 1.5em 4em;
+  padding: 1.5em 0em;
+  background-color: #f7f9fc;
 }
 
 .back-btn {
@@ -14,7 +15,8 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 1.5em 0em;
+  padding: 2em 4em;
+  color: #072B68;
 }
 
 .header-text {
@@ -34,5 +36,5 @@
 }
 
 .separator {
-  border-top: 1px solid var(--Bagel-Rescue-Light-Blue);
+  border-top: 1px solid #d4d8dd;
 } 
